Export to zip (#38)
